log
Tue 07 May 2024 02:04:52 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2e5cb56
Tue 07 May 2024 02:09:08 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:23: error: expected expression before ‘||’ token
   80 |     if (tree == NULL) || tree->root == NULL;
      |                       ^~
treemap.c:86:20: error: too few arguments to function ‘tree->lower_than’
   86 |         } else if (tree->lower_than(node->pair->key)) {
      |                    ^~~~
Compilation failed
e8058c8
Tue 07 May 2024 02:10:15 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
7ebf82e
Tue 07 May 2024 02:16:59 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: too few arguments to function ‘tree->lower_than’
   62 |         } else if (tree->lower_than(current->pair->key)) {
      |                    ^~~~
treemap.c:84:21: error: expected expression before ‘>’ token
   84 |     } else if (tree*>lower_than(key, parent->pair->key)) {
      |                     ^
Compilation failed
b3de34b
Tue 07 May 2024 02:17:53 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
43446d5
Tue 07 May 2024 02:19:31 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
ea2ec3b
Tue 07 May 2024 02:29:21 AM UTC: 
 treemap.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:112:19: error: expected ‘(’ before ‘{’ token
  112 |         } else if {
      |                   ^
      |                   (
treemap.c:120:5: error: expected expression before ‘}’ token
  120 |     }
      |     ^
treemap.c:120:5: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:104:6: note: declared here
  104 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:121:14: error: expected expression before ‘>’ token
  121 |     if (node*>left == NULL || node->right == NULL) {
      |              ^
cc1: all warnings being treated as errors
Compilation failed
707fd49
Tue 07 May 2024 02:33:18 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
dc67d3d
